--- a/webroot/less/styles.less
+++ b/webroot/less/styles.less
@@ -37,4 +37,9 @@ h1.subtitle {
 	margin-top: -5px; // from +20
 	font-weight: 300 !important;
 }
+
+.welcome-to-the-doc-wiki h1 {
+	padding: 10px 0; // looks a bit better when the homepage header has a bit of space around it
+}
+
 // end Headers 
